--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 #configuration
 server.port=8888
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.sql-show=true
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/fullstuck
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
